# UNLZ_Llamacode

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LlamaCode.cmd  LlamaCode.lnk  README.en.md  README.md  TODO.md  agent_todo.md  app.md  app_icon.rc  build.bat  build_auto.bat  build_coord.ps1  bump-patch.bat  install.bat  plan_harness.md  setup.bat  stderr.txt  tests.bat  update-shortcut.ps1  worktree.ps1
.claude/: settings.json
.claude/commands/: coverage-loop.md
.claude/skills/gate/: SKILL.md
assets/: system_profiles.json  tray_icon.xcf
assets/benchmarks/: aa_intelligence.json  local_cookbook_priorities.json
assets/benchmarks/custom/: agent_efficiency_e2e_v1.json
assets/eval/: reasoning_bias.json  sample_suite.json  snake_retro_singlefile.json
assets/hwfit/: hf_models.json
assets/update/: latest.json
build_tests/LlamaCode/: LlamaCode_qml_module_dir_map.qrc
build_tests/LlamaCodeTests.dir/Debug/: LlamaCodeTests.exe.recipe
build_workspace_verify/LlamaCode.dir/Release/: LlamaCode.exe.recipe
build_workspace_verify/llamacode_core.dir/Release/: llamacode_core.lib.recipe
build_workspace_verify/qml/LlamaCode/: LlamaCode_qml_module_dir_map.qrc
build_workspace_verify/qmltypes/: LlamaCode_foreign_types.txt
build_workspace_verify/test_agent_context_budget.dir/Release/: test_agent_context_budget.exe.recipe
build_workspace_verify/test_agent_profiles.dir/Release/: test_agent_profiles.exe.recipe
build_workspace_verify/test_agent_tools.dir/Release/: test_agent_tools.exe.recipe
build_workspace_verify/test_agent_wire.dir/Release/: test_agent_wire.exe.recipe
build_workspace_verify/test_appcontroller.dir/Release/: test_appcontroller.exe.recipe
build_workspace_verify/test_automation.dir/Release/: test_automation.exe.recipe
build_workspace_verify/test_automation_store.dir/Release/: test_automation_store.exe.recipe
build_workspace_verify/test_auxiliary_job_scheduler.dir/Release/: test_auxiliary_job_scheduler.exe.recipe
build_workspace_verify/test_backends_net.dir/Release/: test_backends_net.exe.recipe
build_workspace_verify/test_capability.dir/Release/: test_capability.exe.recipe
build_workspace_verify/test_catalog.dir/Release/: test_catalog.exe.recipe
build_workspace_verify/test_code_graph.dir/Release/: test_code_graph.exe.recipe
build_workspace_verify/test_control_api.dir/Release/: test_control_api.exe.recipe
build_workspace_verify/test_cron.dir/Release/: test_cron.exe.recipe
build_workspace_verify/test_document_extractor.dir/Release/: test_document_extractor.exe.recipe
build_workspace_verify/test_download_history.dir/Release/: test_download_history.exe.recipe
build_workspace_verify/test_engine_catalog.dir/Release/: test_engine_catalog.exe.recipe
build_workspace_verify/test_eval.dir/Release/: test_eval.exe.recipe
build_workspace_verify/test_gateway.dir/Release/: test_gateway.exe.recipe
build_workspace_verify/test_gguf_profiles.dir/Release/: test_gguf_profiles.exe.recipe
build_workspace_verify/test_hotspots.dir/Release/: test_hotspots.exe.recipe
build_workspace_verify/test_logtriage.dir/Release/: test_logtriage.exe.recipe
build_workspace_verify/test_mail.dir/Release/: test_mail.exe.recipe
build_workspace_verify/test_master_cli.dir/Release/: test_master_cli.exe.recipe
build_workspace_verify/test_memory_graph.dir/Release/: test_memory_graph.exe.recipe
build_workspace_verify/test_mermaid.dir/Release/: test_mermaid.exe.recipe
build_workspace_verify/test_profile_health.dir/Release/: test_profile_health.exe.recipe
chat-templates/: gemma4-tools-fixed.jinja
docs/: TODO.md  agent-efficiency.md  agent.md  agent_todo.md  archex_context_review.md  arreglos.md  benchmark-levels-runbook.md  codehamr_harness_review.md  control-api.md  omnix_review.md  plan_harness.md  qa_foreground_automation.md  tuner.md
docs/benchmark-levels-artifacts/2026-06-29/: README.md
qml/: Main.qml
qml/components/: CommandPreview.qml  LcCheckBox.qml  LcComboBox.qml  LcScrollBar.qml  MermaidPreviewDialog.qml  NavBar.qml  OpencodeConfigDialog.qml
qml/pages/: AgentPage.qml  BenchmarkPage.qml  BinariesPage.qml  CharlaPage.qml  ChatPage.qml  LaunchPage.qml  ModelRootsPage.qml  ProfilesPage.qml  ResearchPage.qml  SettingsPage.qml  TasksPage.qml
scripts/: bootstrap.ps1  bootstrap.sh
src/: AppController.cpp  AppController.h  ThemeProvider.cpp  ThemeProvider.h  main.cpp
src/core/: AuxiliaryJobScheduler.cpp  AuxiliaryJobScheduler.h  BinaryRegistry.cpp  BinaryRegistry.h  CapabilityDetector.cpp  CapabilityDetector.h  CatalogModel.h  ControlApi.cpp  ControlApi.h  DocumentExtractor.cpp  DocumentExtractor.h  EngineCatalog.cpp  EngineCatalog.h  GGUFScanner.cpp  GGUFScanner.h  LlamaBinary.cpp  LlamaBinary.h  MermaidRenderer.cpp  MermaidRenderer.h  ModelCatalog.cpp  ModelCatalog.h  ModelRoot.cpp  ModelRoot.h  ModelRootRegistry.cpp  ModelRootRegistry.h  OllamaImporter.cpp  OllamaImporter.h  SecretStore.cpp  SecretStore.h  ToolCallingSupport.cpp  ToolCallingSupport.h
tests/: qa_ocr_probe.cpp  qa_visual_automation.cpp  qa_web_providers.cpp  test_agent_context_budget.cpp  test_agent_efficiency.cpp  test_agent_profiles.cpp  test_agent_tools.cpp  test_agent_wire.cpp  test_appcontroller.cpp  test_automation.cpp  test_automation_store.cpp  test_auxiliary_job_scheduler.cpp  test_backends_net.cpp  test_build_coord.ps1  test_build_scripts.ps1  test_capability.cpp  test_code_graph.cpp  test_control_api.cpp  test_core.cpp  test_cron.cpp  test_download_history.cpp  test_engine_catalog.cpp  test_eval.cpp  test_fuzzy_match.cpp  test_gateway.cpp  test_gguf_profiles.cpp  test_hotspots.cpp  test_logtriage.cpp  test_memory_graph.cpp  test_mermaid.cpp  test_ocr_locator.cpp  test_profile_health.cpp  test_profiles.cpp  test_registries.cpp  test_run_history.cpp  test_secret_store.cpp  test_session_guard.ps1  test_system_profiles.cpp  test_tasks.cpp  test_theme.cpp  (+3 more)
tools/: add_35a3b_profiles.py  add_vram_tier_profiles.py  meter_system_profiles.py  patch_tier_fixes.py  relink_profiles.py  rename_profiles.py  repoint_templates.py  session_guard.ps1  vram_balloon.py
(+225 files in other folders)
